Changes in serialization options

--- a/GeocodingAPI/GeocodingAPI.csproj
+++ b/GeocodingAPI/GeocodingAPI.csproj
@@ -23,8 +23,13 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
     <PackageReference Include="Newtonsoft.Json.Schema" Version="3.0.14" />
     <PackageReference Include="Nominatim.API" Version="2.0.0" />
+    <PackageReference Include="NSwag.Annotations" Version="13.18.2" />
     <PackageReference Include="RestSharp" Version="108.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Migrations\" />
   </ItemGroup>
 
 </Project>
