--- a/GeocodingAPI/GeocodingAPI.csproj
+++ b/GeocodingAPI/GeocodingAPI.csproj
@@ -26,6 +26,7 @@
     <PackageReference Include="NSwag.Annotations" Version="13.18.2" />
     <PackageReference Include="RestSharp" Version="108.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    <PackageReference Include="xunit" Version="2.4.2" />
   </ItemGroup>
 
   <ItemGroup>
